--- a/themes/hugo-geekdoc/i18n/en.yaml
+++ b/themes/hugo-geekdoc/i18n/en.yaml
@@ -35,8 +35,12 @@ posts_count:
 posts_tagged_with: All posts tagged with '{{ . }}'
 
 footer_build_with: >
-  Built with <a href="https://gohugo.io/" class="gdoc-footer__link">Hugo</a> and
-  <svg class="gdoc-icon gdoc_heart"><use xlink:href="#gdoc_heart"></use></svg>
+  <div style="font-size:9pt; line-height:9pt;">
+  <a href="https://creativecommons.org/licenses/by/4.0/" target="_new"><img src="/images/ccby.png" border="0" height="40" align="left" style="padding:10px" /></a>
+  DAACS was developed under grants #P116F150077 and <a href="https://ies.ed.gov/funding/grantsearch/details.asp?ID=4549" style='color:white;' target="_new">#R305A210269</a>
+  from the U.S. Department of Education. However, the contents do not necessarily represent the policy of the U.S. Department of Education,
+  and you should not assume endorsement by the Federal Government.
+  </div>
 footer_legal_notice: Legal Notice
 footer_privacy_policy: Privacy Policy
 footer_content_license_prefix: >
