--- a/themes/hugo-geekdoc/i18n/en.yaml
+++ b/themes/hugo-geekdoc/i18n/en.yaml
@@ -37,7 +37,8 @@ posts_tagged_with: All posts tagged with '{{ . }}'
 footer_build_with: >
   <div style="font-size:9pt; line-height:9pt;">
   <a href="https://creativecommons.org/licenses/by/4.0/" target="_new"><img src="/images/ccby.png" border="0" height="40" align="left" style="padding:10px" /></a>
-  DAACS was developed under grants #P116F150077 and <a href="https://ies.ed.gov/funding/grantsearch/details.asp?ID=4549" style='color:white;' target="_new">#R305A210269</a>
+  DAACS was developed under grants <a href="https://www2.ed.gov/programs/fitw/awards.html" style='color:white;' target="_new">#P116F150077</a> and
+  <a href="https://ies.ed.gov/funding/grantsearch/details.asp?ID=4549" style='color:white;' target="_new">#R305A210269</a>
   from the U.S. Department of Education. However, the contents do not necessarily represent the policy of the U.S. Department of Education,
   and you should not assume endorsement by the Federal Government.
   </div>
